<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFrooots"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/logfroots" />

    <TextView
        android:id="@+id/register"
        android:layout_width="194dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="#7C7676"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/button"
        android:layout_width="286dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#F17399"
        android:text="@string/register_but"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName12"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName12"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="318dp"
        android:layout_height="46dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#5E5757"
        app:layout_constraintEnd_toEndOf="@+id/register"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/contact_no"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#514E4E"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#514E4E"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName9"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#514E4E"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName10"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/c_password"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#514E4E"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName11"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName11"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11" />

</androidx.constraintlayout.widget.ConstraintLayout>